--- a/i3/config
+++ b/i3/config
@@ -28,7 +28,7 @@ bindsym $mod+Return exec kitty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show
+bindsym $mod+d exec rofi -show run -config ~/dev/dotfiles/.config/rofi.conf
 
 # change focus
 #bindsym $mod+j focus left
