--- a/config/rofi/rofi.conf
+++ b/config/rofi/rofi.conf
@@ -9,4 +9,4 @@ rofi.kb-remove-to-eol:               Shift+x
 
 rofi.width: 30
 rofi.lines: 8
-rofi.font: Dejavu Sans Mono 14
+rofi.font: Terminus 14
