config: remove title from yabar

--- a/config/yabar/yabar.conf
+++ b/config/yabar/yabar.conf
@@ -1,7 +1,7 @@
 bar-list: ["bar1"];
 
 bar1: {
-	block-list: ["workspace", "title", "date", "wifi", "battery"];
+	block-list: ["workspace", "date", "wifi", "battery"];
 	font: "FontAwesome 10";
 	position: "bottom";
 	height: 35;
@@ -13,14 +13,6 @@ bar1: {
 		fixed-size: 40;
 		internal-option1: "1 2 3 4 5 6 7 8 9";
 		background-color-rgb: 0x7a7a79;
-	}
-
-	title: {
-		exec: "xtitle -s";
-		align: "left";
-		fixed-size: 400;
-		type: "persist";
-		background-color-rgb: 0x016a7a;
 	}
 
 	date: {
