--- a/config/polybar/config
+++ b/config/polybar/config
@@ -11,11 +11,12 @@ alert = #bd2c40
 margin-top = 0
 margin-bottom = 0 
 
-[bar/example]
+[bar/bar]
 width = 100%
 height = 25
 fixed-center = false
 monitor = ${env:MONITOR:}
+wm-restack = bspwm
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -33,11 +34,9 @@ font-0 = Terminus:pixelsize=12;1
 font-1 = NotoColorEmoji:fontformat=truetype:scale=10:antialias=false;
 
 modules-left = bspwm
-modules-right = 
+modules-right = battery
 
 tray-position = right
-
-wm-restack = bspwm
 
 cursor-click = pointer
 cursor-scroll = ns-resize
