--- a/config/polybar/config
+++ b/config/polybar/config
@@ -8,14 +8,10 @@ secondary = #e60053
 alert = #bd2c40
 
 [settings]
-format-foreground =
 format-underline = #268bd2
 format-background = ${colors.background-alt}
 format-padding = 1
-format-overline =
-format-spacing =
 format-margin = 0
-format-offset =
 screenchange-reload = true
 
 [global/wm]
@@ -28,7 +24,6 @@ wm-restack = bspwm
 enable-ipc = true
 fixed-center = false
 bottom = false
-separator =
 
 width = 100%
 height = 32
@@ -64,29 +59,25 @@ cursor-scroll = ns-resize
 [module/bspwm]
 type = internal/bspwm
 
-label-focused = %index%
+label-focused = %name%
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
-label-focused-padding = 2
+label-focused-underline = ${colors.primary}
+label-focused-padding = 1
 
-label-occupied = %index%
-label-occupied-padding = 2
+label-occupied = %name%
+label-occupied-padding = 1
 
-label-urgent = %index%!
+label-urgent = %name%!
 label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-padding = 1
 
-label-empty = %index%
+label-empty = %name%
 label-empty-foreground = ${colors.foreground-alt}
-label-empty-padding = 2
+label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
-
-format-underline =
-format-background =
-format-padding =
 
 [module/battery]
 type = custom/script
