--- a/config/polybar/config
+++ b/config/polybar/config
@@ -1,11 +1,11 @@
 [colors]
-background = #222
-background-alt = #444
-foreground = #dfdfdf
-foreground-alt = #555
-primary = #ffb52a
-secondary = #e60053
-alert = #bd2c40
+background = #1d1f21
+background-wm = #444444
+background-alt = #2d2d2d
+foreground = #d8dee9
+foreground-alt = #555555
+primary = #3c71ea
+alert = #ed0b0b
 
 [settings]
 format-underline = #268bd2
@@ -60,7 +60,7 @@ cursor-scroll = ns-resize
 type = internal/bspwm
 
 label-focused = %name%
-label-focused-background = ${colors.background-alt}
+label-focused-background = ${colors.background-wm}
 label-focused-underline = ${colors.primary}
 label-focused-padding = 1
 
