update polybar config

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -81,13 +81,13 @@ label = %title:0:30:...%
 
 [module/battery]
 type = custom/script
-exec = polybattery
+exec = $HOME/.config/polybar/scripts/polybattery
 label = "%output%"
 interval = 30
 
 [module/memory]
 type = custom/script
-exec = polymemory
+exec = $HOME/.config/polybar/scripts/polymemory
 label = "%output%"
 interval = 10
 format-prefix = "🧠 "
