--- a/config/polybar/config
+++ b/config/polybar/config
@@ -40,7 +40,7 @@ padding = 0
 module-margin-left = 0
 module-margin-right = 0
 
-font-0 = Terminus:pixelsize=12;1
+font-0 = Fira Code Nerd Font:pixelsize=12;1
 font-1 = NotoColorEmoji:fontformat=truetype:scale=10:antialias=false;
 
 modules-left = bspwm xwindow
