--- a/config/polybar/config
+++ b/config/polybar/config
@@ -6,6 +6,7 @@ foreground = #d8dee9
 foreground-alt = #555555
 primary = #3c71ea
 alert = #ed0b0b
+bordercolor = #4c566a
 
 [settings]
 format-background = ${colors.background-alt}
@@ -16,6 +17,10 @@ screenchange-reload = true
 margin-top = 0
 margin-bottom = 0 
 
+; ==================
+; Primary Bar Config
+; ==================
+
 [bar/bar]
 monitor = ${env:MONITOR:}
 wm-restack = bspwm
@@ -23,11 +28,14 @@ enable-ipc = true
 fixed-center = false
 bottom = false
 
+border-bottom-size = 2
+border-bottom-color = ${colors.bordercolor}
+
 width = 100%
 height = 25
-offset-x = 0
-offset-y = 0
-radius = 0.0
+;offset-x = 0
+;offset-y = 0
+;radius = 0.0
 
 background = ${colors.background}
 foreground = ${colors.foreground}
