--- a/config/polybar/config
+++ b/config/polybar/config
@@ -36,10 +36,10 @@ height = 25
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-padding-left = 1
+;padding-left = 1
 padding-right = 1
-;module-margin-left = 0
-;module-margin-right = 0
+module-margin-left = 1
+module-margin-right = 1
 
 font-0 = Fira Code Nerd Font:pixelsize=10;1
 font-1 = NotoColorEmoji:fontformat=truetype:scale=10:antialias=false;
