remove the additional padding from cpu module

--- a/config/polybar/config
+++ b/config/polybar/config
@@ -101,7 +101,7 @@ interval = 3600
 [module/cpu]
 type = internal/cpu
 interval = 2
-label = %percentage:2%%
+label = %percentage%%
 format-prefix = " "
 
 ; Show the current time
