--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -1,62 +1,35 @@
-#################################
-#             Shadows           #
-#################################
-shadow = true;
-shadow-radius = 7;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-
-#################################
-#           Fading              #
-#################################
-
-fading = true
-fade-in-step = 0.01;
-fade-out-step = 0.01;
-
-#################################
-#   Transparency / Opacity      #
-#################################
-
-inactive-opacity = 0.8;
-frame-opacity = 0.7;
-inactive-opacity-override = false;
-
-#################################
-#     Background-Blurring       #
-#################################
-
-blur-kern = "3x3box";
-
-# Exclude conditions for background blur.
-# blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
+opacity-rule = [
+    "90:class_g = 'Alacritty'"
 ];
 
-#################################
-#       General Settings        #
-#################################
+# Blur
+blur-background = true;
+blur-method = "dual_kawase";
+blur-strength = 2;
 
-backend = "xrender";
-vsync = true
+# Fading
+fading = false;
+fade-in-step = 0.05;
+fade-out-step = 0.05;
+fade-exclude = [ ];
+
+# Other
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
-refresh-rate = 0
-detect-transient = true
-detect-client-leader = true
-use-damage = true
-log-level = "warn";
+refresh-rate = 0;
+vsync = "opengl-swc";
+dbe = false;
+unredir-if-possible = true;
+focus-exclude = [ "class_g = 'Cairo-clock'" ];
+detect-transient = true;
+detect-client-leader = true;
+invert-color-include = [ ];
 
-wintypes:
-{
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
-};
+# GLX backend
+backend = "glx";
+glx-no-stencil = true;
+glx-copy-from-front = false;
+glx-swap-method = "undefined";
+glx-no-rebind-pixmap = true;
