--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -63,7 +63,7 @@ shadow-offset-y = -7;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
-  "99:class_g = '$BROWSER'"
+  "99:class_g = 'Firefox'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
