Update git config

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,8 @@
 [user]
 	name = Jack Coble
 	email = jackcoble@tutanota.com
+	signingkey = 1E7CEC0A79972B64
+[commit]
+	gpgsign = true
+[gpg]
+	program = gpg2
