Update default email for git

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Jack Coble
-	email = jackcoble@tutanota.com
+	email = jack@3xpl0its.xyz
 	signingkey = 1E7CEC0A79972B64
 [commit]
 	gpgsign = true
