Update tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,17 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# Vi bindings
+set-window-option -g mode-keys vi
+
+# Copy/paste like Vim
+bind-key -T copy-mode-vi v send -X begin-selection
+unbind y
+bind-key -T copy-mode-vi y send -X copy-pipe "xclip -selection clipboard >/dev/null"
+
+# Terminal type
+set -g default-terminal "screen-256color"
+
 # Reload our configuration on the fly
 bind r source-file ~/.tmux.conf
 
