--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,13 +10,11 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# Vi bindings
-set-window-option -g mode-keys vi
-
-# Copy/paste like Vim
-bind-key -T copy-mode-vi v send -X begin-selection
-unbind y
-bind-key -T copy-mode-vi y send -X copy-pipe "xclip -selection clipboard >/dev/null"
+# Move between panes with Vim keybindings (Ctrl + {h,j,k,l})
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 
 # Terminal type
 set -g default-terminal "screen-256color"
@@ -26,12 +24,3 @@ bind r source-file ~/.tmux.conf
 
 # Enable mouse support
 set -g mouse on
-
-# Set escape time to 0
-set -s escape-time 0
-
-# Navigate through different panes with Vim keybindings
-bind h select-pane -L
-bind l select-pane -R
-bind j select-pane -D
-bind k select-pane -U
