Update tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,3 +29,17 @@ bind r source-file ~/.tmux.conf
 
 # Enable mouse support
 set -g mouse on
+
+# Paste buffer
+unbind p
+bind p paste-buffer
+
+# Copy buffer
+unbind y
+bind-key -T copy-mode-vi y send -X copy-pipe "xclip -selection clipboard >/dev/null"
+
+# Use Vim bindings in copy-mode
+set-window-option -g mode-keys vi
+
+# Use 'v' to start a selection
+bind-key -T copy-mode-vi v send -X begin-selection
