--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,5 +1,4 @@
-# Cache for a day
 max-cache-ttl 86400
 default-cache-ttl 86400
-# Use curses-based pinentry program
 pinentry-program /usr/bin/pinentry-curses
+enable-ssh-support
