Update SSH config file

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,4 +1,4 @@
-Host arrow
+Host feirm
 	HostName 62.171.167.225
 	Port 2222
 	User jack
@@ -7,12 +7,11 @@ Host nas
 	HostName 192.168.0.12
 	Port 59513
 	User jack
-	PreferredAuthentications publickey
 
-Host syncthing
+Host umbrel
 	HostName 192.168.0.15
-	Port 2222
-	User pi
+	Port 22
+	User umbrel
 
 Host controller
 	HostName 192.168.0.10
