Add host to SSH config

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,14 @@
+# Feirm VPS
 Host feirm
 	HostName 62.171.167.225
 	Port 2222
 	User jack
+
+# Personal Nextcloud VPS
+Host nextcloud
+    HostName 161.97.105.194
+    Port 13747
+    User jack
 
 Host nas
 	HostName 192.168.0.12
