Update fish configs

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,25 +1,28 @@
-# Feirm VPS
+# Feirm Server
 Host feirm
 	HostName 62.171.167.225
 	Port 2222
 	User jack
 
-# Personal Nextcloud VPS
+# Nextcloud Server
 Host nextcloud
     HostName 161.97.105.194
     Port 13747
     User jack
 
+# Local NAS
 Host nas
 	HostName 192.168.0.12
 	Port 59513
 	User jack
 
+# Local Node
 Host umbrel
 	HostName 192.168.0.15
 	Port 22
 	User umbrel
 
+# Unifi Controller and Pi-hole
 Host controller
 	HostName 192.168.0.10
 	Port 22
