--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -5,3 +5,4 @@ with-subkey-fingerprint
 personal-digest-preferences SHA512
 cert-digest-algo SHA512
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
+default-key E5B1B9260FA9AA26
