--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,4 +1,4 @@
 max-cache-ttl 120
 default-cache-ttl 60
-pinentry-program /usr/bin/pinentry-qt
+pinentry-program /usr/bin/pinentry
 enable-ssh-support
