Update GPG configs for MacOS

--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -1,3 +1,5 @@
+use-agent
+auto-key-retrieve
 keyserver hkps://keys.openpgp.org
 keyid-format long
 with-fingerprint
@@ -5,4 +7,4 @@ with-subkey-fingerprint
 personal-digest-preferences SHA512
 cert-digest-algo SHA512
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
-default-key E5B1B9260FA9AA26
+default-key C579C19990CE95D90E0B61ABE5B1B9260FA9AA26
