--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,4 +1,6 @@
-max-cache-ttl 120
-default-cache-ttl 60
-pinentry-program /usr/bin/pinentry
+max-cache-ttl 7200
+default-cache-ttl 600
+pinentry-program /usr/local/bin/pinentry-mac
 enable-ssh-support
+debug-level basic
+log-file $HOME/.gnupg/gpg-agent.log
