Update SSH config

--- a/.ssh/config
+++ b/.ssh/config
@@ -4,10 +4,16 @@ Host feirm
 	Port 2222
 	User jack
 
-# Nextcloud Server
-Host nextcloud
+# Feirm Bridge Server
+Host bridge
     HostName 161.97.105.194
     Port 13747
+    User jack
+
+# Nextcloud Server
+Host nextcloud
+    HostName 167.86.127.229
+    Port 26634
     User jack
 
 # Local NAS
@@ -15,15 +21,3 @@ Host nas
 	HostName 192.168.0.12
 	Port 59513
 	User jack
-
-# Local Node
-Host umbrel
-	HostName 192.168.0.15
-	Port 22
-	User umbrel
-
-# Unifi Controller and Pi-hole
-Host controller
-	HostName 192.168.0.10
-	Port 22
-	User pi
