--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,6 +1,5 @@
-max-cache-ttl 7200
-default-cache-ttl 600
-pinentry-program /usr/local/bin/pinentry-mac
+max-cache-ttl 120
+default-cache-ttl 60
+pinentry-program /usr/bin/pinentry
 enable-ssh-support
-debug-level basic
 log-file $HOME/.gnupg/gpg-agent.log
